Amélioration des composants

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -41,12 +41,74 @@ li {
     border-bottom: 2px solid gold
 }
 
-.menu-toggle {
-    display: none;
-    flex-direction: column;
-    cursor: pointer;
+/* Global styles */
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
+/* Navbar styles */
+.navbar {
+  background-color: #333; /* Couleur de fond du menu */
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo img {
+  height: 50px;
+}
+
+.menu-toggle {
+  display: none; /* Masque le menu burger par défaut sur les grands écrans */
+  cursor: pointer;
+}
+
+.menu {
+  list-style: none;
+  display: flex;
+}
+
+.menu li {
+  margin: 0 15px;
+}
+
+.menu a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  font-size: 16px;
+  transition: color 0.3s ease;
+}
+
+.menu a:hover {
+  color: gold; 
+}
+
+
+@media (max-width: 768px) {
+  .menu {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 80px;
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    padding: 10px;
+  }
+
+  .menu.open {
+    display: flex;
+  }
+
+  .menu-toggle {
+    display: block; 
+    cursor: pointer;
+  }
+}
 .bar {
     background-color: #fff;
     height: 3px;
@@ -229,7 +291,7 @@ a:hover {
       margin: 10px 0;
       width: 100%;
   }
-}
+} */
 
 
 /*------------------------------------------------------ Accueil -------------------------------------------------------- */
@@ -662,211 +724,97 @@ li {
   }
 
 
-
-
-
-/* -------------------------------------------------------------------------------------------------------- */
-.content_projet {
-  padding: 1rem;
+  
+  
+  /*------------------------------------------------------Formulaire-------------------------------------------------------- */
+  .container-form {
+  background: linear-gradient(to right, rgb(16, 90, 153), rgb(108, 148, 202), #5081B3);
+  height: 100vh;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
-  flex-direction: column;
-  margin: 10rem;
-  background-color:  #48454518;
-}
-.content_projet h2  {
-  margin-bottom: 5rem;
-}
-
-.content_projet a  {
-  color: orange;
-  text-decoration: none;
-}
-.projet_img {
-  width: 600px;
-  filter: blur(5px); 
-  transition: filter 0.3s;
-  margin-bottom: 1rem;
-}
-
-.projet_img:hover {
-  filter: blur(0); 
-}
-
-.projet_section{
-  text-align: center;
-}
-
-/* Media query pour la taille d'un iPhone */
-@media (max-width: 375px) {
-  .content_projet {
-    margin: 5rem; 
-  }
-  .content_projet h2 {
-    margin-bottom: 2rem;
-  }
-  .projet_img {
-    width: 100%; 
-  }
-}
-
-/* Media query pour la taille d'une tablette */
-@media (max-width: 768px) {
-  .content_projet {
-    margin: 5rem;
-  }
-  .content_projet h2 {
-    margin-bottom: 3rem;
-  }
-  .projet_img {
-    width: 400px; 
-  }
-}
-
-
-
-/*------------------------------------------------------Formulaire-------------------------------------------------------- */
-.container {
-  max-width: 100vh;
-  margin: 0 auto;
-  background-color: #eeeeee2c;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.062);
-  border-radius: 15px;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  -ms-border-radius: 15px;
-  -o-border-radius: 15px;
-}
-
-h4 {
-  text-align: center;
-  color: #333;
-  font-size: 24px;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-
-}
-
-label {
-  font-weight: bold;
-  
-}
-
-input, textarea {
-  padding: 10px;
-  margin: 5px 0;
-  border: 1px solid #ccc;
-
-
-}
-
-button {
-  color: #fff;
-  padding: 10px;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-  border: none;
-  background-color: #f3900ec7;
-  text-decoration: none;
-  position: relative;
-  display: inline-block;
-  font-family: "Raleway", sans-serif;
-  font-size: 13px;
-  line-height: 24px;
-  font-weight: 700;
-  padding: 12px 35px;
-  color: #fff;
-  text-transform: uppercase;
-  border-radius: 3px;
-  transition: all 0.3s;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-}
-
-button:hover {
-  background-color: #555;
-}
-
-/* Règles de médias queries pour les tablettes (largeur d'écran entre 768px et 1023px) */
-@media (min-width: 768px) and (max-width: 1023px) {
-  .container {
-    max-width: 80%;
-  }
-}
-
-/* Règles de médias queries pour les téléphones (largeur d'écran inférieure à 768px) */
-@media (max-width: 767px) {
-  .container {
-    max-width: 100%;
-    padding: 10px;
-  }
-  
-  form {
-    padding: 0;
-  }
-  
-  label {
-    font-size: 14px;
-  }
-  
-  input, textarea {
-    font-size: 14px;
-  }
-  
-  button {
-    font-size: 14px;
-    padding: 10px 20px;
-  }
+  align-items: center;
 }
 
 .bg {
-          width: 100%;
-          height: 100vh;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          background-size: 300% 300%;
-          background-image: linear-gradient(-45deg, rgba(255, 60, 0, 0.349) 0%, rgba(255, 98, 0, 0.468) 25%,rgba(255, 183, 0, 0.234)50%, #ff80006e 100%);
-          -webkit-animation: AnimateBG 5s ease infinite;
-          animation: AnimateBG 5s ease infinite;
+  display: flex;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.container {
+  text-align: center;
+  animation: fadeIn 1s ease;
+  margin-top: auto;
+  margin-bottom: 0;
+  
 }
 
-@-webkit-keyframes AnimateBG {
-  0% {
-    background-position: 0% 50%;
+#contact-form {
+  background-color: rgba(255, 255, 255, 0.203);
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  max-width: 400px;
+  width: 500px;
+  transition: all 0.3s ease;
+  
+}
+
+#contact-form:hover {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+}
+
+label {
+  display: block;
+  margin-bottom: 8px;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 16px;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  background: rgba(255, 255, 255, 0.2);
+  color: #fff;
+  transition: background 0.3s ease, border 0.3s ease;
+}
+
+input:focus,
+textarea:focus {
+  background: rgba(255, 255, 255, 0.3);
+  border: 1px solid #45a049;
+}
+
+button {
+  background: gold;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+button:hover {
+  background: #a04e45;
+}
+
+/* Animation styles */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
   }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
+  to {
+    opacity: 1;
   }
 }
 
-@keyframes AnimateBG {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
+.foot_form {
+  margin-top: -20px;
 }
-
-
-
-
 
 
 /*------------------------------------------------------ Footer-------------------------------------------------------- */
